<resources>
    <string name="app_name">Chapp.AR</string>
    <string name="title_location">Location</string>
    <string name="title_users">Users</string>
    <string name="title_chats">Chats</string>
    <string name="title_matches">Matches</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="logout">Logout</string>
    <string name="menu_help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_preferences">Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="snackbar_text">Are you stuck for words? A joke is always a good way to start a conversation! press 💡</string>
</resources>
