<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/nav_main">


    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.chappar10.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.chappar10.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_chat_list"
        android:name="com.example.chappar10.ChatListFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat_list" />

</navigation>